# voice-agent

./: .env.example  .gitignore  AGENTS.md  CI_FIX.md  Makefile  README.md  RESEARCH.md  SELF_HOSTING.md  TODO.md  agent.py  generate_call_url.py  pyproject.toml
.github/workflows/: ci.yml
docs/: multi-agent-install-session-notes.md
scripts/: install_all_agents.py
skill/: SKILL.md  clawtalk.skill  livekit-voice.skill
skill/assets/agent/: agent.py  env.example  pyproject.toml
skill/scripts/: setup.py  setup.sh  start.py  start.sh  status.py  status.sh  stop.py  stop.sh
tests/: conftest.py  smoke_test.py  test_agent.py  test_backend.py  test_config.py  test_gateway.py  test_generate_call_url.py  test_hub_integration.py  test_retry.py  test_skill_install.py  test_tts_voice.py  test_voice_instructions.py
voice_agent/: __init__.py  __main__.py  constants.py  heartbeat.py  hub.py  llm.py  retry.py  session.py  startup.py
web/: .gitignore  Dockerfile  fly.toml
web-skill/: README.md  SKILL.md  livekit-voice-web.skill  talk-to-claw.skill
web-skill/scripts/: call_url.py  deploy.py  setup.py  status.py  utils.py
web/backend/: .env.example  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
web/frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
web/frontend/src/: App.tsx  api.ts  index.css
web/frontend/src/__tests__/: api.test.ts
web/frontend/src/pages/: Call.module.css  Call.tsx  Home.module.css  Home.tsx
