[project]
name = "livekit-agent"
version = "0.1.0"
description = "LiveKit conversational voice agent"
requires-python = ">=3.11"
dependencies = [
    "livekit-agents[openai,deepgram,silero,turn-detector]>=0.12,<2",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["agent"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "fastapi>=0.135.1",
    "openai>=1.0",
    "av>=12.0",
    "livekit>=0.17",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--ignore=tests/smoke_test.py"
markers = [
    "integration: requires live gateway",
    "smoke: requires live hub and running agent",
]
