[project]
name = "livekit-agent"
version = "0.1.0"
description = "LiveKit conversational voice agent"
requires-python = ">=3.11"
dependencies = [
    "livekit-agents[openai,deepgram,silero,turn-detector]>=0.12,<2",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["agent"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "fastapi>=0.135.1",
    "openai>=1.0",
    "av>=12.0",
    "livekit>=0.17",
    "ruff>=0.6.0",
    "bandit>=1.7.0",
    "mypy>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--ignore=tests/smoke_test.py"
markers = [
    "integration: requires live gateway",
    "smoke: requires live hub and running agent",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F811"]  # Allow unused imports and redefinitions in tests

[tool.bandit]
exclude_dirs = [".venv", "web/frontend/node_modules"]
skips = [
    "B101",  # assert_used - asserts are fine in tests
    "B603",  # subprocess_without_shell_equals_true - we intentionally avoid shell=True
    "B607",  # start_process_with_partial_path - uv/python are in PATH, not security risk
]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = false  # Start permissive, can tighten later
check_untyped_defs = false  # Don't check untyped function bodies yet
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false  # Don't warn about unused ignores (permissive mode)
warn_no_return = true
strict_equality = true
warn_return_any = false  # Too noisy for now
exclude = [
    "^web/frontend/",
    "^.venv/",
]

# Per-module options for third-party libraries without stubs
[[tool.mypy.overrides]]
module = [
    "livekit.*",
    "livekit.agents.*",
    "livekit.plugins.*",
    "av.*",
    "fcntl.*",
]
ignore_missing_imports = true

# Tests can be less strict
[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["attr-defined", "no-untyped-def"]
